# unlearning-probes

./: .gitignore  LICENSE  README.md  main.py  project_status.md  pyproject.toml  requirements.txt
notebooks/: 01_sanity_check.ipynb  02_probe_training.ipynb  03_refusal_response_checks.ipynb  03_refusal_response_checks.py  04_refusal_direction.ipynb  05_coherence_test.ipynb  06_baseline_logprobs.ipynb  07_ablation_recovery.ipynb  07_unlearning_layersweep.ipynb  08_ablation_translation.ipynb  09_diffmeans_magnitude_sweep.ipynb  10_epistemic_refusal.ipynb  10_epistemic_refusal.py  11_refusal_alignment.ipynb  12_relearning.ipynb  diffmeans.ipynb
results/: cleaned_harmful_harmless_responses_labeled.csv  project_status.md
results/ablation_recovery/: ablation_recovery_results.json  diff_in_means.json  recovery_all_models.json
results/baseline_logprobs/: baseline_logprobs.json
results/ignorance_check/: ignorance_check_responses.txt
results/relearning/: AltPO.auth20.step400.lr2e-5.relearning_curves.json  RMU.auth20.step400.lr2e-5.relearning_curves.json
results/relearning.old/: AltPO.auth20.step400.lr2e-5.relearning_curves.json  auth20.step400.lr2e-5.relearning_curves.json
results/sweep_altpo/: sweep_metadata.json
results/sweep_base/: dashboard.html  (+1 more)
scripts/: audit_peak.py  compare_relearning.py  download_models.py  ignorance_check.py  run_sweep.py
src/: config.py  dashboard.py  geometry.py  hooks.py  intervention.py  invented_authors.py  layer_sweep.py  magnitude_sweep.py  model_loader.py  probes.py  recovery_experiment.py  refusal_alignment.py  relearning.py
(+52 files in other folders)
